tests/checker/diagnostics/0191_adt_recursive_tree_payload_mismatch_06.ml.infer.expected
File "0191_adt_recursive_tree_payload_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0191_adt_recursive_tree_payload_mismatch_06 is not a valid module name.

File "0191_adt_recursive_tree_payload_mismatch_06.ml", line 5, characters 24-28:
5 |   Node_zeta (Leaf_zeta, true, Leaf_zeta)
                            ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
